# deepstream

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pic_test.py
customparser_yolov5/: nvdsinfer_yolo_engine.cpp  nvdsparsebbox_Yolo.cpp  yoloPlugins.cpp
include/: deepstream_test.h  getGPS.h  messageGenerate.h  pic_test.h  tcp_ip_message.h  yoloPlugins.h
src/: deepstream_test.cpp  getGPS.cpp  messageGenerate.cpp  pic_test.cpp  tcp_ip_message.cpp
utils/: config_infer_primary_yoloV5.txt  deepstream_app_config_yoloV5.txt  dstest1_pgie_config.txt  labels_roadDamage.txt  test.cpp  tracker_config.txt
